[tool.poetry]
name = "brilliant-imagery-ui"
version = "0.1.0"
description = ""
authors = ["Chad DeRosier <chad.derosier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^7.0.0"
brilliant-imagery = {path = "../brilliantimagery/dist/brilliant-imagery-20.1.0.tar.gz"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
