[tool.poetry]
name = "brilliantimagery-ui"
version = "0.1.1"
description = ""
authors = ["Chad DeRosier <chad.derosier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^7.0.0"
brilliantimagery = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
auto-py-to-exe = "^2.6.6"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4.18"
pywin32 = "^227"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
